Fix OrderController tests and stabilize coverage